Implemented Reviewer Suggestions

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,4 +3,52 @@
     <string name="icon_desc">A purple button that plays the selected song</string>
     <string name="add_song">Add New Song</string>
     <string name="now_playing">Now Playing</string>
+    <string name="no_song_playing">No song playing</string>
+
+    <!-- These are for the songs to be displayed. -->
+    <string name="first_song_title">I Miss You</string>
+    <string name="first_song_artist">blink-182</string>
+    <string name="first_song_album">Blink-182</string>
+    <string name="second_song_title">Yours To Hold</string>
+    <string name="second_song_artist">Skillet</string>
+    <string name="second_song_album">Comatose</string>
+    <string name="third_song_title">LOVE. (FT Zacari)</string>
+    <string name="third_song_artist">Kendrick Lamar</string>
+    <string name="third_song_album">DAMN.</string>
+    <string name="fourth_song_title">Hold On, We\'re Going Home</string>
+    <string name="fourth_song_artist">Majid Jordan, Drake</string>
+    <string name="fourth_song_album">Nothing Was the Same (Deluxe)</string>
+    <string name="fifth_song_title">Better in Stereo</string>
+    <string name="fifth_song_artist">Dove Cameron</string>
+    <string name="fifth_song_album">Liv and Maddie (Music from the TV Series)</string>
+    <string name="sixth_song_title">As If</string>
+    <string name="sixth_song_artist">Blaque</string>
+    <string name="sixth_song_album">Blaque Out</string>
+    <string name="seventh_song_title">Me Enamore</string>
+    <string name="seventh_song_artist">Shakira</string>
+    <string name="seventh_song_album">El Dorado</string>
+    <string name="eighth_song_title">Let Me Love You</string>
+    <string name="eighth_song_artist">Mario</string>
+    <string name="eighth_song_album">Turning Point</string>
+    <string name="ninth_song_title">I\'m Already Gone</string>
+    <string name="ninth_song_artist">A Day to Remember</string>
+    <string name="ninth_song_album">Common Courtesy</string>
+    <string name="tenth_song_title">Te Quiero Tanto, Tanto</string>
+    <string name="tenth_song_artist">OV7</string>
+    <string name="tenth_song_album">Entrega Total</string>
+    <string name="eleventh_song_title">In Florida</string>
+    <string name="eleventh_song_artist">A Day to Remember</string>
+    <string name="eleventh_song_album">Bad Vibrations</string>
+    <string name="twelfth_song_title">Mi Niña Bonita</string>
+    <string name="twelfth_song_artist">Chino y Nacho</string>
+    <string name="twelfth_song_album">Mi Niña Bonita</string>
+    <string name="thirteenth_song_title">Down</string>
+    <string name="thirteenth_song_artist">Lil Wayne, Jay Sean</string>
+    <string name="thirteenth_song_album">All or Nothing</string>
+    <string name="fourteenth_song_title">Antes De Que Te Vayas</string>
+    <string name="fourteenth_song_artist">Marco Antonio Solis</string>
+    <string name="fourteenth_song_album">Trozos de Mi Alma, Vol. 2</string>
+    <string name="fifteenth_song_title">Love Story</string>
+    <string name="fifteenth_song_artist">Taylor Swift</string>
+    <string name="fifteenth_song_album">Fearless</string>
 </resources>
